--- a/static/css/index.css
+++ b/static/css/index.css
@@ -520,6 +520,9 @@ body {
 }
 
 .confusion-legend--side {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   margin: 0;
   flex: 1 1 auto;
   white-space: nowrap;
